--- a/2-HTML/201-HTML-RESUME/HTML-201-01/index.html
+++ b/2-HTML/201-HTML-RESUME/HTML-201-01/index.html
@@ -1,69 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Form</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ankita Mune</title>
 </head>
 <body>
-<form>
-	<fieldset>
-	<legend>Personal Details</legend>
+    <h1>Ankita Mune</h1>
+    <p>Projects</p>
+    <a href="https://www.linkedin.com/in/ankita-mune-a56028246/">Linkedin</a>
+    <a href="https://github.com/ankitamune">Github</a>
+    <hr>
+    <h2>MusicPlayer in Java</h2>
+    
+    <p>Java music player is a simple classic mp3 player which has features like playing selected mp3 music files, pausing the music, resuming the music, and stopping the music. The music player is used daily by all types of users. Music helps users to create a fresh mind, inspire life, and also boost the mind of the user.     </p>
+    <hr>
 
-<p>
-		<label>
-		Salutation
-		<br />
-		<select name="salutation">
-			<option>--None--</option>
-			<option>Mr.</option>
-			<option>Ms.</option>
-			<option>Mrs.</option>
-			<option>Dr.</option>
-			<option>Prof.</option>
-		</select>
-		</label>
-	</p>
+    <h3> Event Management System Website</h3>
+    <p>	Event management System is a simple website which has organised the event    </p>
+    <hr>
 
-<p>
-  
-  <label >First name: 
-    <input name="firstName" />
-  </label>
-</p>
+    <h2>Skills</h2>
+    
+    <ul>
+        <li>Java</li>
+        <li>JavaScript</li>
+        <li>HTML</li>
+        <li>CSS</li>
+    </ul>
 
-    <br>
-
-		<label>Last name: <input name="lastName" /></label>
-	
-
-<p>
-		Gender :
-		<label><input type="radio" name="gender" value="male" /> Male</label>
-		<label><input type="radio" name="gender" value="female" /> Female</label>
-	</p>
-
-
-<p>
-		<label>Email:<input type="email" name="email" /></label>
-	</p>
-
-<p>
-		<label>Date of Birth:<input type="date" name="birthDate"></label>
-	</p>
-
-<p>
-		<label>
-		Address :
-		<br />
-		<textarea name="address" cols="30" rows="3"></textarea>
-		</label>
-	</p>
-
-<p>
-		<button type="submit">Submit</button>
-    </p>
-	</fieldset>
-</form>
+    <hr>
+    <h2>Hobbies</h2>
+    <ol>
+        <li>Drawing</li>
+        <li>Reading Books</li>
+        <li>Playing Cricket</li>
+        <li>Listening Music</li>
+    </ol>
+    <hr>
 </body>
+</html>
