--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
   </head>
   <body>
-    start your code here
+    <div class="navbar">
+      
+      <nav>
+        <!-- <div>
+          <h2>My Voot</h2>
+        </div> -->
+  
+        <div>
+          <a href="">My Voot</a>
+          <a href="">Premium</a>
+          <a href="">Sports</a>
+          <a href="">Shows</a>
+          <a href="">Movies</a>
+          <a href="">Kid</a>
+          <a href="">Channels</a>
+          <!-- <img src="url(search.svg);" alt=""> -->
+        </div>
+      </nav>
+    </div>
   </body>
 </html>
