--- a/3-CSS/306-CSS-Grid/CSS-306-01/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-01/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <!-- start your code here -->
+    <div class="container">
+        <div class="box box1">1</div>
+        <div class="box box2">2</div>
+        <div class="box box3">1</div>
+        <div class="box box4">1</div>
+        <div class="box box5">1</div>
+        <div class="box box6">1</div>
+        <div class="box box7">1</div>
+        <div class="box box8">1</div>
+        <div class="box box9">1</div>
+        <div class="box box10">1</div>
+        <div class="box box11 ">1</div>
+        <div class="box box12">1</div>
+        <div class="box box13">1</div>
+        <div class="box box14">1</div>
+    </div>
 </body>
 </html>
