--- a/3-CSS/306-CSS-Grid/CSS-306-03/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-03/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <!-- start your code here -->
+    <button class="btn btn-dark" type="submit">About</button>
+
 </body>
 </html>
