--- a/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-01/index.html
+++ b/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-01/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    Start your code here
+    <div id="logo">
+      <img src="https://geekster.in/images/logo.svg" alt="">
+    </div>
   </body>
 </html>
