--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-03/index.html
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-03/index.html
@@ -1,12 +1,163 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    Start your code here
-  </body>
+<html>
+
+<head>
+	<style>
+		body {
+			background-image: url("https://www.thespruceeats.com/thmb/6lfcov0DyrPVtE6zhX2law4RFA4=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/freshvegetablesAlexRaths-4c1ea186a88e4fd7b95283eee614600c.jpg");
+			font-family: 'Raleway', sans-serif;
+		}
+		
+		.container {
+			width: 350px;
+			height: 600px;
+			background-color: #fff;
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translateX(-50%) translateY(-50%);
+			
+		}
+		
+		
+    h1{
+      text-align: center;
+    }
+		
+		.wrapper {
+			padding: 20px;
+		}
+		
+		input,
+		select {
+			width: 60%;
+			/* border: none;
+			border-bottom: 1px solid #0074D9; */
+			padding: 10px;
+		}
+		
+		input:focus,
+		select:focus {
+			border: 1px solid #0074D9;
+			outline: none;
+		}
+		
+		select {
+			width: 88% !important;
+		}
+		
+		button {
+			margin: 20px auto;
+			width: 100%;
+			height: 50px;
+			background-color: rgb(112, 29, 29);
+			color: #fff;
+			font-size: 16px;
+			border: none;
+			
+		}
+		
+		.tip {
+			text-align: center;
+			font-size: 18px;
+			display: none;
+		}
+	</style>
+</head>
+
+<body>
+	<div class="container">
+		<h1>
+      Carles'Tip <br>
+      Claculator
+    </h1>
+		<div class="wrapper">
+			
+    
+
+<p>How much was your bill</p>
+
+			$<input type="text"
+				id="amount"
+				placeholder="Amount to be paid"> 
+
+			
+
+
+<p>How was the service ?</p>
+
+
+
+			<select id="services">
+				<option selected disabled hidden>Select</option>
+				<option value="0.25">25% - Top Notch</option>
+				<option value="0.20">20% - Excellent</option>
+				<option value="0.15">15% - Good</option>
+				<option value="0.10">10% - Bad</option>
+				<option value="0.05">5% - Worst</option>
+			</select>
+
+			
+
+
+<p>Number of people sharing the bill?</p>
+
+
+
+			<input type="text"
+				id="persons"
+				placeholder="Number of people sharing the bill"> people
+        <br>
+			<button id="calculate">Calculate</button>
+		</div>
+
+		<div class="tip">
+			
+
+
+<p>Tip Amount</p>
+
+
+
+			<span id="total">0</span>₹
+			<span id="each">each</span>
+		</div>
+	</div>
+	<script>
+		//the function called when Calculate button is clicked.
+		window.onload = () =>
+			{
+				/*calling a function calculateTip which
+				will calculate the tip for the bill.*/
+				document.querySelector('#calculate').onclick =
+				calculateTip;
+			}
+
+		function calculateTip() {
+	
+			let amount = document.querySelector('#amount').value;
+			let persons = document.querySelector('#persons').value;
+			let service = document.querySelector('#services').value;
+
+			console.log(service);
+			
+			if (amount === '' && service === 'Select') {
+				alert("Please enter valid values");
+				return;
+			}
+
+			if (persons === '1')
+
+				document.querySelector('#each').style.display = 'none';
+			else
+		
+				document.querySelector('#each').style.display = 'block';
+
+			let total = (amount * service) / persons;
+			total = total.toFixed(2);
+			document.querySelector('.tip').style.display = 'block';
+			document.querySelector('#total').innerHTML = total;
+		}
+	</script>
+</body>
+
 </html>
