--- a/3-CSS/306-CSS-Grid/CSS-306-01/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-01/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- start your code here -->
     <div class="container">
-        <div class="box box1">1</div>
+        <div class=" box box1"><div class="shape"><div class="diamond">1</div></div></div>
         <div class="box box2">2</div>
         <div class="box box3">1</div>
         <div class="box box4">1</div>
