--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/index.html
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <!-- start your code here -->
+    <div class="container">
+        <div class="item">
+            <div class="item1">
+                <h2>1.</h2>
+            </div>
+            <div class="item2">
+                <button>Hover Me</button>
+            </div>
+        </div>
+    
+        <div class="item">
+            <div class="item3">
+                <h2>2.</h2>
+            </div>
+            
+            <div class="right-menu">
+                <button class="menu-button">Hover Me</button>
+                <div class="dropdown-menu">
+                    <a href="#">Link1</a>
+                    <a href="#">Link2</a>
+                    <a href="#">Link3</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
