--- a/4-Advance-JS/401-DOM-Manipulation/AdvanceJS-401-02/index.html
+++ b/4-Advance-JS/401-DOM-Manipulation/AdvanceJS-401-02/index.html
@@ -5,7 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="401-02.css">
+    <style>
+      .main{
+        width: 100px;
+        height: 70px;
+        margin: auto;
+        /* padding: 100px; */
+        
+      }
+      .container{
+        width: 90px;
+        height: 25px;
+        display: block;
+        font-size: large;
+        margin: 5px;
+        text-align: center;
+        border: solid 2px;
+      }
+    </style>
 </head>
 <body>
     <div class="main">
