--- a/4-Advance-JS/401-DOM-Manipulation/AdvanceJS-401-01/index.html
+++ b/4-Advance-JS/401-DOM-Manipulation/AdvanceJS-401-01/index.html
@@ -25,9 +25,8 @@
       const value=(e.target.value);
         text.innerHTML=value;
       }
-
-
-    document.getElementById('input-field').addEventListener('input',input);
+      document.getElementById('input-field').addEventListener('input',input);
+      document.getElementById("input-field").style.borderColor = "skyblue";
     </script>
 </body>
 </html>
