--- a/3-CSS/307-Advance-CSS-Selectors/CSS-307-01/index.html
+++ b/3-CSS/307-Advance-CSS-Selectors/CSS-307-01/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+ 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <title>calculator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+ 
 <body>
-    <!-- start your code here -->
+ 
+<table class="calculator" >
+  <tr>
+    <td colspan="3"> <input class="display-box" type="text"  /> </td>
+    <td> <input type="button" value="C" id="btn"  /> </td>
+  </tr>
+  <tr>
+    
+    <td> <input type="button" value="1" /> </td>
+    <td> <input type="button" value="2" /> </td>
+    <td> <input type="button" value="3" /> </td>
+    <td> <input type="button" value="/" /> </td>
+  </tr>
+  <tr>
+    <td> <input type="button" value="4" /> </td>
+    <td> <input type="button" value="5" /> </td>
+    <td> <input type="button" value="6" /> </td>
+    <td> <input type="button" value="-" /> </td>
+  </tr>
+  <tr>
+    <td> <input type="button" value="7" /> </td>
+    <td> <input type="button" value="8" /> </td>
+    <td> <input type="button" value="9" /> </td>
+    <td> <input type="button" value="+" /> </td>
+  </tr>
+  <tr>
+    <td> <input type="button" value="." /> </td>
+    <td> <input type="button" value="0" /> </td>
+ 
+   
+    <td> <input type="button" value="=" id="btn" /> </td>
+    <td> <input type="button" value="*"  /> </td>
+  </tr>
+</table>
+ 
+
+ 
 </body>
-</html>
+ 
