--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-01/index.html
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-01/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="403-01.css">
+    <style>
+      /* input{
+        margin: auto;
+        top: 20%;
+      } */
+    </style>
     <title>Document</title>
-  </head>
-  <body>
-    Start your code here
-  </body>
+</head>
+<body>
+        <div class="container">
+        <input type="text" class="keyboard" placeholder="You Pressed">
+          <div id="keycode">
+         <!-- <p id="text">keycode</p> -->
+           <p id="ans"></p>
+         </div>
+         <div id="keyboard">
+         <!-- <p id="key-pressed">Key Pressed</p> -->
+         <p id="key-text"></p>
+         </div>
+     </div>   
+    <script>
+      const keyBoard = document.querySelector(".keyboard");
+
+      keyBoard.addEventListener("keyup",(e)=>{
+      let key = document.getElementById("key-text");
+      let ans=document.getElementById('ans');
+        ans.innerHTML=e.keyCode;
+      document.getElementById("ans").style.color="green";
+      //  key.innerHTML = e.key;
+});
+    </script>
+</body>
 </html>
