--- a/3-CSS/301-CSS-BLOG-WEBSITE/CSS-301-01/index.html
+++ b/3-CSS/301-CSS-BLOG-WEBSITE/CSS-301-01/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -22,12 +23,15 @@
         </div>
         </div>
         <div class="eve">
-          <p class="rah">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro iure, maiores repellat rerum doloremque numquam eligendi minima nulla laudantium vel ea non. Perferendis corrupti quidem enim sed vero, doloremque rem! Qui porro, nostrum placeat rerum expedita id molestiae sapiente debitis.</p>
-          <p class="rah1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro iure, maiores repellat rerum doloremque numquam eligendi minima nulla laudantium vel ea non. Perferendis corrupti quidem enim sed vero, doloremque rem! Qui porro, nostrum placeat rerum expedita id molestiae sapiente debitis.</p>
-          <p class="rah2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro iure, maiores repellat rerum doloremque numquam eligendi minima nulla laudantium vel ea non. Perferendis corrupti quidem enim sed vero, doloremque rem! Qui porro, nostrum placeat rerum expedita id molestiae sapiente debitis.</p> <br>
+          <p class="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro iure, maiores repellat rerum doloremque numquam eligendi minima nulla laudantium vel ea non. Perferendis corrupti quidem enim sed vero, doloremque rem! Qui porro, nostrum placeat rerum expedita id molestiae sapiente debitis.</p>
+          <p class="para1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro iure, maiores repellat rerum doloremque numquam eligendi minima nulla laudantium vel ea non. Perferendis corrupti quidem enim sed vero, doloremque rem! Qui porro, nostrum placeat rerum expedita id molestiae sapiente debitis.</p>
+          <p class="paea2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro iure, maiores repellat rerum doloremque numquam eligendi minima nulla laudantium vel ea non. Perferendis corrupti quidem enim sed vero, doloremque rem! Qui porro, nostrum placeat rerum expedita id molestiae sapiente debitis.</p> <br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/sLf-ZYxgrXA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-          <p class="rah3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro iure, maiores repellat rerum doloremque numquam eligendi minima nulla laudantium vel </p>
+          <p class="para2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro iure, maiores repellat rerum doloremque numquam eligendi minima nulla laudantium vel </p>
         </div>
-      </center>
+        <footer>
+          <p class="nocopy">Originally Published at  <a href="">www.rahulkumar.com</a> on July 29,2022 </p>
+        </footer>
+  </center>
 </body>
 </html>
