--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/index.html
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- start your code here -->
-    <div class="container">
+    <!-- <div class="container">
         <div class="item">
             <div class="item1">
                 <h2>1.</h2>
@@ -24,15 +24,44 @@
                 <h2>2.</h2>
             </div>
             
-            <div class="right-menu">
-                <button class="menu-button">Hover Me</button>
-                <div class="dropdown-menu">
-                    <a href="#">Link1</a>
-                    <a href="#">Link2</a>
-                    <a href="#">Link3</a>
+            <div class="dropdown">
+                <button class="dropbtn">Dropdown</button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div>
+        </div> -->
+    <!-- </div> -->
+    <div class="main">
+        <div class="main1">
+            <div>
+                <h1>1.</h1>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Hover me</button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
                 </div>
             </div>
-        </div>
+        </div> 
+        <div class="main1">
+            <div>
+                <h1>2.</h1>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Hover me</button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+            </div>
+        </div>   
     </div>
+    
 </body>
 </html>
