--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
@@ -17,14 +17,21 @@
   
         <div>
           <a href="">My Voot</a>
-          <a href="">Premium</a>
-          <a href="">Sports</a>
-          <a href="">Shows</a>
-          <a href="">Movies</a>
-          <a href="">Kid</a>
-          <a href="">Channels</a>
+          <a href="" id="a1">Premium</a>
+          <a href=""id="a1">Sports</a>
+          <a href=""id="a1">Shows</a>
+          <a href=""id="a1">Movies</a>
+          <a href=""id="a1">Kid</a>
+          <a href=""id="a1">Channels</a>
           <!-- <img src="url(search.svg);" alt=""> -->
+          <!-- <button class="btn_search"> <i class="fa 
+            fa-search"></i> </button> -->
+            <a href=""><img src="https://www.voot.com/images/icon_search_white.svg" alt=""
+              height="30px"
+              ></a>
+
         </div>
+        
       </nav>
     </div>
   </body>
