--- a/4-Advance-JS/410-Projects/AdvanceJS-410-02/index.html
+++ b/4-Advance-JS/410-Projects/AdvanceJS-410-02/index.html
@@ -1,12 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="410-02.css">
+    <style>
+      .suggested{
+    display: inline-block;
+    border: 2px solid;
+    margin-right:7px;
+    margin-top: 5px;
+    padding: 2px 10px;
+    background: rgb(126, 126, 228);
+    border-radius: 5px;
+}
+h1{
+  background-color: rgb(89, 89, 138);
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+h2{
+  text-align: center;
+}
+.form_wrap{
+ text-align: center;
+}
+#input{
+  width: 300px;
+  height: 40px;
+}
+#search{
+  height: 45px;
+  background-color: rgb(89, 89, 138);
+  color: white;
+  margin-left: 0px;
+}
+    </style>
     <title>Document</title>
-  </head>
-  <body>
-    Start your code here
-  </body>
+</head>
+<body>
+    <nav>
+    <div class="container">
+        <h1>
+            Dictionary
+        </h1>
+    </div>
+    </nav>
+    <section class="input container">
+        <h2>
+            Find any word exist in the world
+        </h2>
+        <div class="form_wrap">
+            <div class="input_wrap">
+                <input type="text" id="input" placeholder="type a word">
+                <button id="search"> Search</button>
+            </div>
+        </div>
+    </section>
+    <section class="data container">
+        <p class="def"></p>
+        <div class="not_found"></div> 
+    </section>
+    <script>
+      let input=document.querySelector('#input');
+let searchbtn = document.querySelector("#search");
+let apikey = "5bc74f3c-bc3f-4e42-8966-e98f83a0fb3d";
+let notFound = document.querySelector(".not_found");
+let defBox = document.querySelector(".def");
+
+searchbtn.addEventListener('click',function(e){
+    e.preventDefault();
+    // console.log(input);
+    notFound.innerHTML="";
+    defBox.innerHTML="";
+    let word=input.value;
+    if(word===''){
+        alert('No word typed')
+        return ;
+    }
+    Getdata(word);
+})
+
+async function Getdata(word){
+    const response = await fetch(
+      `https://www.dictionaryapi.com/api/v3/references/collegiate/json/${word}?key=${apikey}`
+    );
+    const data=await response.json();
+     console.log(data);
+   if(typeof data[0]==='string'){
+    let heading =document.createElement('h3');
+    heading.innerHTML='Did you mean?'
+    notFound.appendChild(heading);
+    data.forEach(element => {
+        let suggestion=document.createElement('span');
+        suggestion.classList.add('suggested');
+        suggestion.innerHTML=element;
+        notFound.appendChild(suggestion);
+    });
+    return;
+   }
+    let defination=data[0].shortdef[0];
+    defBox.innerHTML=defination;
+
+}
+
+
+
+    </script>
+</body>
 </html>
