--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="footer">
         <div class="main">
-          <input type="checkbox" name="" id="">
+          <input type="checkbox" name="" id="check">
         </div>
         <div class="main1">
           <p>I have read and accept the terms and conditons.
