--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
@@ -29,6 +29,10 @@
             <a href=""><img src="https://www.voot.com/images/icon_search_white.svg" alt=""
               height="30px"
               ></a>
+              <!-- <i style="font-size:24px;color: white;" class="fa">&#xf007;</i> -->
+              <!-- <i class="fa fa-user"></i>
+              <i style="font-size:24px" class="fa">&#xf007;</i> -->
+              az
 
         </div>
         
