--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-02/index.html
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-02/index.html
@@ -8,7 +8,7 @@
     <style>
       body {
         text-align: center;
-        background-color: #a06060;
+        background-color: #404B69;
       }
 
       h1 {
@@ -19,39 +19,7 @@
 
       }
 
-      .w {
-          background-image: url("images/tom1.png");
-      }
-
-      .a {
-          background-image: url("images/tom2.png");
-      }
-
-      .s {
-          background-image: url("images/tom3.png");
-      }
-
-.d {
-  background-image: url("images/tom4.png");
-}
-
-.j {
-  background-image: url("images/snare.png");
-}
-
-.k {
-  background-image: url("images/crash.png");
-}
-
-.l {
-  background-image: url("images/kick.png");
-}
-
-.set {
-  margin: 10% auto;
-}
-
-.pressed {
+    .pressed {
   box-shadow: 0 3px 4px 0 #DBEDF3;
   opacity: 0.5;
 }
@@ -73,11 +41,18 @@
   margin: 10px;
   background-color: white;
 }
+h1 {
+    font-size: 5rem;
+    color: #DBEDF3;
+    font-family: "Arvo", cursive;
+    text-shadow: 3px 0 #da0463;
+}
+
 
     </style>
   </head>
   <body>
-    
+    <h1 id="title">Drum 🥁 Kit</h1>
     <div class="set">
      <button class="w drum">w</button>
      <button class="a drum">a</button>
