--- a/4-Advance-JS/405-WorldCountries-Data-Visualization/AdvanceJS-405-01/index.html
+++ b/4-Advance-JS/405-WorldCountries-Data-Visualization/AdvanceJS-405-01/index.html
@@ -29,6 +29,12 @@
     /* border:2px solid; */
         width:300px;
       }
+      .graph-buttons{
+        text-align: center;
+      }
+      #populationtable{
+        text-align: center;
+      }
     </style>
     <title>Document</title>
 </head>
@@ -72,7 +78,7 @@
         </tr>
         
      </table>
-    <script src="./data/coutries_data.js"></script>
+     <script src="./data/coutries_data.js"></script>
     <script >
       function compare(a, b) {
   if (a.population > b.population) {
