--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-03/index.html
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-03/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,76 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- start your code here -->
+    start your code here
+</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+      .contaier{
+        background-color: orange;
+        display: flex;
+        justify-content: space-between;
+        padding: 15px;
+      }
+      .logo{
+        float: left;
+      }
+      .hold{
+        display: flex;
+        justify-content: space-between;
+        gap: 50px;
+      }
+      *{
+        margin: 0%;
+        padding: 0;
+      }
+      select{
+        background-color: orange;
+        border: none;
+      }
+      iframe{
+        width: 100%;
+        height: 560px;
+      }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="contaier">
+            <div class="logo">
+                <marquee behavior="" direction=""> <p>Rahul Kumar</p></marquee>
+            </div>
+           <div class="hold">
+            <div class="menu">
+                <p>Artists</p>
+            </div>
+            <div class="menu">
+                <p>Events</p>
+            </div>
+             <div class="menu">
+                <select name="" id="">
+                    <option value="">
+                        <p>About</p>
+                    </option>
+                </select>
+            </div>
+            <div class="menu">
+                <p>Book an Artist</p>
+            </div>
+            <div class="menu">
+                <p>Shop</p>
+            </div>
+        </div>
+ 
+        </div>
+
+    </header>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/AbVvjV0YgNo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
