--- a/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-01/index.html
+++ b/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-01/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rename Google Button</title>
+    <style>
+      img {
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
-    <div id="logo">
-      <img src="https://geekster.in/images/logo.svg" alt="">
-    </div>
+    <img src="https://github.com/geeksterin/WebAssignment/raw/main/4-Advance-JS/402-DOM-Manipulation/image/geekster_search.png" alt="Google Rename ScreenShot" />
   </body>
 </html>
