--- a/4-Advance-JS/410-Projects/AdvanceJS-410-03/index.html
+++ b/4-Advance-JS/410-Projects/AdvanceJS-410-03/index.html
@@ -7,6 +7,27 @@
     <title>Document</title>
   </head>
   <body>
-    Start your code here
+    <nav>
+      <div class="container">
+          <h1>
+              Mile Finder
+          </h1>
+      </div>
+      </nav>
+      <section class="input container">
+          <h2>
+              Find the perfect meal to dine upon
+          </h2>
+          <div class="form_wrap">
+              <div class="input_wrap">
+                  <input type="text" id="input" placeholder="type a word">
+                  <button id="search"> Search</button>
+              </div>
+          </div>
+      </section>
+      <section class="data container">
+          <p class="def"></p>
+          <div class="not_found"></div> 
+      </section>
   </body>
 </html>
