--- a/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-01/index.html
+++ b/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-01/index.html
@@ -12,6 +12,6 @@
     </style>
   </head>
   <body>
-    <img src="https://github.com/geeksterin/WebAssignment/raw/main/4-Advance-JS/402-DOM-Manipulation/image/geekster_search.png" alt="Google Rename ScreenShot" />
+    <img src="google.png" alt="Google Rename ScreenShot" />
   </body>
 </html>
