--- a/3-CSS/306-CSS-Grid/CSS-306-03/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-03/index.html
@@ -4,11 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>css-306-03</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <!-- start your code here -->
-    <button class="btn btn-dark" type="submit">About</button>
 
+<body>
+    <div class="nav">
+        <button class="btn btn-dark" href="#" role="button">Home</button>
+<button class="btn btn-dark" type="submit">About</button>
+<img class="nav-img" src="./img/Capture.JPG" width="60px" alt="">
+<button class="btn btn-dark" type="submit">Menu</button>
+<button class="btn btn-dark" type="submit">Contact</button>
+
+
+    </div>
+    <div class="grid">
+        <div class="item1"><img src="https://st3.depositphotos.com/1005155/18681/i/450/depositphotos_186815414-stock-photo-stack-of-newspapers.jpg"  width="40px" alt=""></div>
+        <div class="item2"><img src="https://st3.depositphotos.com/1005979/19237/i/450/depositphotos_192376072-stock-photo-big-news-headlines-newspaper-announcement.jpg"  width="40px" alt=""></div>
+        <div class="item3"><img src="https://st.depositphotos.com/2288675/2450/i/450/depositphotos_24507499-stock-photo-daily-newspaper.jpg"  width="40px"  alt=""></div>
+        <div class="item4"><img src="https://static9.depositphotos.com/1152339/1159/i/450/depositphotos_11592027-stock-photo-newspaper.jpg"  width="40px"  alt=""></div>
+        <div class="item5"><img src="https://st3.depositphotos.com/11433364/14371/i/450/depositphotos_143713009-stock-photo-coffee-cup-and-smartphone-on.jpg" width="40px" alt=""></div>
+        <div class="item6"><img src="https://st.depositphotos.com/1011349/1902/i/450/depositphotos_19021149-stock-photo-word-background.jpg" width="40px" alt=""></div>
+        <div class="item7"><img src="https://st4.depositphotos.com/13349494/19700/i/450/depositphotos_197002274-stock-photo-one-daily-newspaper-lying-white.jpg" width="40px" alt=""></div>
+       
+        <div class="item8"><img src="https://st3.depositphotos.com/11433364/14371/i/450/depositphotos_143713001-stock-photo-coffee-cup-and-smartphone-on.jpg" width="40px" alt=""></div>
+        <div class="item9"><img src="https://img.freepik.com/premium-vector/epidemic-breaking-news-mockup-coronavirus-newspaper-coronavirus-outbreak-newsletter-paper-page-mockup-daily-newspaper-news-related-covid-19_87561-473.jpg?w=740"width="40px" alt=""></div>
+    </div>
+    <div class="navbar-bottom">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                  <a class="nav-link" href="#">ABOUT</a>
+                  <a class="nav-link" href="#">MENU</a>
+                  <a class="nav-link disabled">CONTACT</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+    </div>
 </body>
-</html>
+</html> 
