--- a/4-Advance-JS/408-leaderboard/AdvanceJS-408-01/index.html
+++ b/4-Advance-JS/408-leaderboard/AdvanceJS-408-01/index.html
@@ -4,9 +4,213 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Player Leaderboard</title>
+    <style>
+      body{
+        background-color: rgb(167, 218, 241);
+        margin: 0;
+        padding: 0;
+      }
+  
+  .heading{
+    margin: 30px 0px;
+    font-size: 23px;
+    font-weight: 600;
+    text-align: center;
+  }
+
+  .container{
+    width: 60%;
+    margin: 0px auto;
+   
+  }
+
+  .form{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+
+  .form input{
+    margin: 5px;
+    height: 30px;
+    width: 170px;
+    font-size: 18px;
+    padding-left: 5px;
+    border: 1px solid rgba(134, 90, 90, 0.696);
+  }
+
+  .form input:focus{
+    outline: none;
+    border: 2px solid rgb(171, 108, 108) ;
+  }
+
+  .form button{
+    background-color:rgb(8, 6, 6) ;
+    color: whitesmoke;
+    padding: 0px 20px;
+    border: none;
+    cursor: pointer; 
+  }
+
+  .form button:hover{
+    background-color: rgb(0, 0, 0) ;
+  }
+
+  .warning{
+    margin-top: 20px;
+    color: red;
+    text-align: center;
+  }
+
+  .result{
+    display: flex;
+    margin-top: 10px;
+    background-image: linear-gradient(45deg, #feeeab 0%, #fb7eb3 60%);
+    padding: 5px 60px 5px 5px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .first{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 20%;
+  }
+
+  .first .p{
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+
+  .score-date{
+    font-size: 10px;
+    margin-top: 5px;
+    color: rgb(245, 245, 246);
+  }
+
+  .cname{
+    text-transform: uppercase;
+    width: 40%;
+    letter-spacing: 2px;
+  }
+
+  .delete{
+    display: flex;
+
+  }
+  .scores{
+    width: 5%;
+  }
+
+  .del{
+    margin-left: 20px;
+    background-color: whitesmoke;
+    padding: 12px;
+    border-radius: 50%;
+    cursor: pointer;
+    width: 35%;
+  }
+
+  .del:hover{
+    background-color: rgb(168, 192, 133);
+  }
+
+  .icon{
+    color: rgb(0,0,0);
+  }
+    </style>
   </head>
   <body>
-    Start your code here
+    <p class="heading">30 Days Of JavaScript Challenge Leaderboard</p>
+    <div class="container">
+      <div class="form">
+        <input type="text" id="fname" class="fname" placeholder="First Name" />
+        <input type="text" id="lname" class="lname" placeholder="Last Name" />
+        <input type="text" id="country" class="country" placeholder="Country" />
+        <input
+          type="number"
+          id="score"
+          class="score"
+          placeholder="Player Score"
+        />
+        <button id="add">Add Player</button>
+      </div>
+      <p class="warning" id="warn"></p>
+
+      <div id="show"></div>
+    </div>
+
+    <script>
+      let firstName = document.getElementById("fname");
+let lastName = document.getElementById("lname");
+let country = document.getElementById("country");
+let score = document.getElementById("score");
+let addBtn = document.getElementById("add");
+
+addBtn.addEventListener("click", getData);
+
+function getData() {
+  if (
+    firstName.value == "" ||
+    lastName.value == "" ||
+    country.value == "" ||
+    score.value == ""
+  ) {
+    document.getElementById("warn").innerText = "All fields are mandatory to fill  .";
+  } else {
+    document.getElementById("warn").innerText = "";
+    addData();
+  }
+}
+
+function addData() {
+  
+
+  document.getElementById("show").innerHTML += `<div class="result">
+    <div class="first">
+      <p class="p">${firstName.value} ${lastName.value}</p>
+  
+    </div>
+    <div class="cname">
+      <p>${country.value}</p>
+    </div>
+    <div class="scores">
+      <p>${score.value}</p>
+    </div>
+    <div class="delete">
+      <div class="del icon" onclick="deleteData(this)">
+        <i class="fa-regular fa-trash-can" ></i>
+      </div>
+      <div class="del" onclick="plusData(this)">
+        <p>+5</p>
+      </div>
+      <div class="del" onclick="minusData(this)">
+        <p>-5</p>
+      </div>
+    </div>
+  </div>`;
+
+  firstName.value = "";
+  lastName.value = "";
+  country.value = "";
+  score.value = "";
+}
+
+function deleteData(e) {
+  e.parentElement.parentElement.remove();
+}
+
+function plusData(e) {
+ 
+  e.parentElement.previousElementSibling.children[0].innerText =
+    parseInt(e.parentElement.previousElementSibling.children[0].innerText) + 5;
+}
+function minusData(e) {
+  e.parentElement.previousElementSibling.children[0].innerText =
+    e.parentElement.previousElementSibling.children[0].innerText - 5;
+}
+    </script>
   </body>
 </html>
