--- a/3-CSS/306-CSS-Grid/CSS-306-03/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-03/index.html
@@ -20,16 +20,16 @@
 
     </div>
     <div class="grid">
-        <div class="item1"><img src="https://st3.depositphotos.com/1005155/18681/i/450/depositphotos_186815414-stock-photo-stack-of-newspapers.jpg"  width="40px" alt=""></div>
-        <div class="item2"><img src="https://st3.depositphotos.com/1005979/19237/i/450/depositphotos_192376072-stock-photo-big-news-headlines-newspaper-announcement.jpg"  width="40px" alt=""></div>
-        <div class="item3"><img src="https://st.depositphotos.com/2288675/2450/i/450/depositphotos_24507499-stock-photo-daily-newspaper.jpg"  width="40px"  alt=""></div>
-        <div class="item4"><img src="https://static9.depositphotos.com/1152339/1159/i/450/depositphotos_11592027-stock-photo-newspaper.jpg"  width="40px"  alt=""></div>
-        <div class="item5"><img src="https://st3.depositphotos.com/11433364/14371/i/450/depositphotos_143713009-stock-photo-coffee-cup-and-smartphone-on.jpg" width="40px" alt=""></div>
-        <div class="item6"><img src="https://st.depositphotos.com/1011349/1902/i/450/depositphotos_19021149-stock-photo-word-background.jpg" width="40px" alt=""></div>
-        <div class="item7"><img src="https://st4.depositphotos.com/13349494/19700/i/450/depositphotos_197002274-stock-photo-one-daily-newspaper-lying-white.jpg" width="40px" alt=""></div>
+        <div class="img1"><img src="https://st3.depositphotos.com/1005155/18681/i/450/depositphotos_186815414-stock-photo-stack-of-newspapers.jpg"  width="40px" alt=""></div>
+        <div class="img2"><img src="https://st3.depositphotos.com/1005979/19237/i/450/depositphotos_192376072-stock-photo-big-news-headlines-newspaper-announcement.jpg"  width="40px" alt=""></div>
+        <div class="img3"><img src="https://st.depositphotos.com/2288675/2450/i/450/depositphotos_24507499-stock-photo-daily-newspaper.jpg"  width="40px"  alt=""></div>
+        <div class="img4"><img src="https://static9.depositphotos.com/1152339/1159/i/450/depositphotos_11592027-stock-photo-newspaper.jpg"  width="40px"  alt=""></div>
+        <div class="img5"><img src="https://st3.depositphotos.com/11433364/14371/i/450/depositphotos_143713009-stock-photo-coffee-cup-and-smartphone-on.jpg" width="40px" alt=""></div>
+        <div class="img6"><img src="https://st.depositphotos.com/1011349/1902/i/450/depositphotos_19021149-stock-photo-word-background.jpg" width="40px" alt=""></div>
+        <div class="img7"><img src="https://st4.depositphotos.com/13349494/19700/i/450/depositphotos_197002274-stock-photo-one-daily-newspaper-lying-white.jpg" width="40px" alt=""></div>
        
-        <div class="item8"><img src="https://st3.depositphotos.com/11433364/14371/i/450/depositphotos_143713001-stock-photo-coffee-cup-and-smartphone-on.jpg" width="40px" alt=""></div>
-        <div class="item9"><img src="https://img.freepik.com/premium-vector/epidemic-breaking-news-mockup-coronavirus-newspaper-coronavirus-outbreak-newsletter-paper-page-mockup-daily-newspaper-news-related-covid-19_87561-473.jpg?w=740"width="40px" alt=""></div>
+        <div class="img8"><img src="https://st3.depositphotos.com/11433364/14371/i/450/depositphotos_143713001-stock-photo-coffee-cup-and-smartphone-on.jpg" width="40px" alt=""></div>
+        <div class="img9"><img src="https://img.freepik.com/premium-vector/epidemic-breaking-news-mockup-coronavirus-newspaper-coronavirus-outbreak-newsletter-paper-page-mockup-daily-newspaper-news-related-covid-19_87561-473.jpg?w=740"width="40px" alt=""></div>
     </div>
     <div class="navbar-bottom">
         <nav class="navbar navbar-expand-lg bg-light">
