--- a/4-Advance-JS/410-Projects/AdvanceJS-410-03/index.html
+++ b/4-Advance-JS/410-Projects/AdvanceJS-410-03/index.html
@@ -9,7 +9,7 @@
     <style>
         body{
     font-family: 'Mulish', sans-serif;
-    background-color: #235454;
+    background-color: rgb(184, 123, 241);
     color: white;
 }
 .header{
@@ -54,7 +54,7 @@
       <img src="" alt="img" width="80px">
     </div>
     <script src=>
-        const form=document.querySelector("form");
+      const form=document.querySelector("form");
 const search=document.getElementById("search");
 const img=document.getElementById("img")
 
