--- a/4-Advance-JS/406-Data-visualization/AdvanceJS-406-01/index.html
+++ b/4-Advance-JS/406-Data-visualization/AdvanceJS-406-01/index.html
@@ -7,17 +7,17 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/7dbc7206c7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+   
     
     <style>
        div.container{
-    width: 100%;
-  height: 400px;
-  /* margin: -98px 100px; */
-  padding: 249px 82px;
-  /* position: absolute; */
+        width: 100%;
+        height: 400px;
+
+        padding: 249px 82px;
+  
  
-  }
+        }
   input{
     width: 500px;
   height: 40px;
@@ -25,7 +25,7 @@
   text-align: center;
   }
   .container{
-    background-image: url("https://wallpaperaccess.com/full/3615993.jpg");
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTT7OVUg9k7LrFjeWxMNiomy5nRJG9V4aYFcjucgp9C&s");
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
@@ -50,9 +50,9 @@
   }
   h1.h1{
     font-size: 40px;
-  word-spacing: 10px;
-  letter-spacing: 20px;
-  color: white;
+    word-spacing: 10px;
+    letter-spacing: 10px;
+    color: white;
   }
   h3.h3{
     color: white;
@@ -159,6 +159,6 @@ document.getElementById("search-form").addEventListener("keyup",showres);
 
  
     </script>
-    <script src="./countries_data.js"></script>
+    <script src="./data/coutries_data.js"></script>
   </body>
 </html>
