--- a/0-Git/GIT-002-GIT-PRACTICE/index.html
+++ b/0-Git/GIT-002-GIT-PRACTICE/index.html
@@ -10,23 +10,29 @@
     <details>
         <p>
             
-abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main)
+abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main) <br>
 $ mkdir geekster2
+</p>
+<p>
 
-abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main)
+abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main) <br>
 $ touch f1.txt
-
-abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main)
+</p>
+<p>
+abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main) <br>
 $ nano fist.txt
-
-abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main)
+</p>
+<p>
+abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main) <br>
 $ commit -m "adding first"
-bash: commit: command not found
+</p>
+<p>
 
-abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main)
+abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main) <br>
 $ rm f1.txt
-
-abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main)
+</p>
+<p>
+abc@DESKTOP-L2V4702 MINGW64 ~/very-basic-resume (main) <br>
 $ git log
 commit 7588b474d6e20586cd213ce18c1e6b2cabf191c3 (HEAD -> main, origin/main, origin/HEAD)
 Author: ankita <ankitamune2305@gmail.com>
